syntax = "proto3";

package api.console.resource;

option go_package = "github.com/omalloc/kratos-console/api/console/resource;resource";
option java_multiple_files = true;
option java_package = "api.console.resource";

import "google/api/annotations.proto";

service App {
  rpc List (AppListRequest) returns (AppListReply) {
    option (google.api.http) = {
      get: "/api/console/app"
    };
  }
}

message AppInfo {
  reserved 5,6,7,8,9;

  int64 id = 1;
  string name = 2;
  string description = 3;
  string icon = 4;
  int64 created_at = 10;
  int64 updated_at = 11;
}

message AppListRequest {
  int32 current = 1;
  int32 page_size = 2;
}

message AppListReply {
  repeated AppInfo data = 1;
  int64 total = 2;
}
